--- a/inscriptions/templates/stats.html
+++ b/inscriptions/templates/stats.html
@@ -62,17 +62,17 @@
         }
     </style>
     <div class="panel panel-default">
-        <div class="panel-heading"> Origine des participants </div>
+        <div class="panel-heading">{% trans "Origine des participants" %}</div>
         <div class="panel-body">
             <div class="col-md-3">
                 <table>
-                    <tr><th>Villes des participants</th><th>#</th><th>%</th></tr>
+                    <tr><th>{% trans "Villes des participants" %}</th><th>#</th><th>%</th></tr>
                     {% for ville in stats.villes|slice:":20" %}
                     <tr><td>{{ ville.nom }}</td><td>{{ ville.count }}</td><td>{% widthratio ville.count stats.course.equipiers 100 %}%</td></tr>
                     {% endfor %}
                     {% with stats.villes|slice:"20:" as villes %}
                     <tr>
-                        <td><a onclick="var table = this.parentNode.parentNode.parentNode; for(var i=0; i<table.rows.length; i++) table.rows[i].style.display=''; this.parentNode.parentNode.style.display='none';">{{ villes|length }} autres villes</a></td>
+                        <td><a onclick="var table = this.parentNode.parentNode.parentNode; for(var i=0; i<table.rows.length; i++) table.rows[i].style.display=''; this.parentNode.parentNode.style.display='none';">{% blocktrans with villes=villes|length %}{{ villes }} autres villes{% endblocktrans %}</a></td>
                         <td><script>
                             var num = 0{% for ville in villes %} + {{ ville.count }}{% endfor %};
                             document.write(num);
@@ -90,7 +90,7 @@
             </div>
             <div class="col-md-3">
                 <table>
-                    <tr><th>Origine des &eacute;quipes</th><th>#</th><th>%</th></tr>
+                    <tr><th>{% trans "Origine des équipes" %}</th><th>#</th><th>%</th></tr>
                     {% with stats.pays|pertinent_values:"equipes" as pays %}
                     {% for key in pays %}
                     <tr><td><img src="/static/flags/{{ stats.pays|get:key|get:"pays"|lower }}.png" alt="{{ stats.pays|get:key|get:"pays"|lower }}" /> {{ key }}</td><td>{{ stats.pays|get:key|get:"equipes" }}</td><td>{% widthratio stats.pays|get:key|get:"equipes" stats.course.equipes 100 %}%</td></tr>
@@ -98,7 +98,7 @@
                     {% endwith %}
                     {% with stats.pays|other_values:"equipes" as pays %}
                     <tr>
-                        <td><a onclick="var table = this.parentNode.parentNode.parentNode; for(var i=0; i<table.rows.length; i++) table.rows[i].style.display=''; this.parentNode.parentNode.style.display='none';">{{ pays|length }} autres pays / regions</a></td>
+                        <td><a onclick="var table = this.parentNode.parentNode.parentNode; for(var i=0; i<table.rows.length; i++) table.rows[i].style.display=''; this.parentNode.parentNode.style.display='none';">{% blocktrans with pays=pays|length %}{{ pays }} autres pays / regions{% endblocktrans %}</a></td>
                         <td><script>
                             var num = 0{% for key in pays %} + {{ stats.pays|get:key|get:"equipes" }}{% endfor %};
                             document.write(num);
@@ -127,11 +127,11 @@
     </div>
 
     <div class="panel panel-default">
-        <div class="panel-heading"> Clubs</div>
+        <div class="panel-heading">{% trans "Clubs" %}</div>
         <div class="panel-body">
             <div class="col-md-4">
                 <table>
-                    <tr><th>Clubs</th><th>#</th><th>%</th></tr>
+                    <tr><th>{% trans "Clubs" %}</th><th>#</th><th>%</th></tr>
                     {% with stats.clubs|pertinent_values:"equipes,2%" as clubs %}
                     {% for club in clubs %}
                     <tr><td>{{ club }}</td><td>{{ stats.clubs|get:club|get:"equipes" }}</td><td>{% widthratio stats.clubs|get:club|get:"equipes" stats.course.equipes 100 %}%</td></tr>
@@ -139,7 +139,7 @@
                     {% endwith %}
                     {% with stats.clubs|other_values:"equipes,2%" as clubs %}
                     <tr>
-                        <td><a onclick="var table = this.parentNode.parentNode.parentNode; for(var i=0; i<table.rows.length; i++) table.rows[i].style.display=''; this.parentNode.parentNode.style.display='none';">{{ clubs|length }} autres clubs</a></td>
+                        <td><a onclick="var table = this.parentNode.parentNode.parentNode; for(var i=0; i<table.rows.length; i++) table.rows[i].style.display=''; this.parentNode.parentNode.style.display='none';">{% blocktrans with clubs=clubs|length %}{{ clubs }} autres clubs{% endblocktrans %}</a></td>
                         <td><script>
                             var num = 0{% for club in clubs %} + {{ stats.clubs|get:club|get:"equipes" }}{% endfor %};
                             document.write(num);
@@ -162,11 +162,11 @@
     </div>
 
     <div class="panel panel-default">
-        <div class="panel-heading"> Catégories</div>
+        <div class="panel-heading">{% trans "Catégories" %}</div>
         <div class="panel-body">
             <div class="col-md-4">
                 <table>
-                    <tr><th>Code</th><th>Catégorie</th><th>#</th><th>%</th></tr>
+                    <tr><th>{% trans "Code" %}</th><th>{% trans "Catégorie" %}</th><th>#</th><th>%</th></tr>
                     {% for cat, value in stats.categories.items %}
                     <tr><td>{{ cat }}</td><td>{{ value.name }} </td><td>{{ value.equipes }}</td><td>{% widthratio value.equipes stats.course.equipes 100 %} %</td></tr>
                     {% endfor %}
@@ -183,11 +183,11 @@
     </div>
 
     <div class="panel panel-default">
-        <div class="panel-heading"> Autres</div>
+        <div class="panel-heading">{% trans "Autres" %}</div>
         <div class="panel-body">
             <div class="col-md-4">
                 <table>
-                    <tr><th>Comment ont-il connu la course</th><th>#</th><th>%</th></tr>
+                    <tr><th>{% trans "Comment ont-il connu la course" %}</th><th>#</th><th>%</th></tr>
                     {% for connu, count in stats.connu %}
                     <tr><td>{{ connu }}</td><td>{{ count }}</td><td>{% widthratio count stats.course.equipes 100 %} %</td></tr>
                     {% endfor %}
