--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -159,6 +159,10 @@ location.href = "choose/";
                         <i class="fa fa-envelope"></i><br />
                         <label>{% blocktrans %}Modèles de mail{% endblocktrans %}</label>
                     </a>
+                    <a href="inscriptions/extraquestion/">
+                        <i class="fa fa-list"></i><br />
+                        <label>{% blocktrans %}Questions supplémentaires{% endblocktrans %}</label>
+                    </a>
                 </td>
             </tr>
         </table>
