--- a/inscriptions/templates/admin/listing_dossards_form.html
+++ b/inscriptions/templates/admin/listing_dossards_form.html
@@ -5,21 +5,21 @@
 <fieldset class="module aligned">
     <h2>Listing retrait dossards</h2>
     <div class="description">
-        <p>Afin de simplifier le retrait des dossards avant votre course, vous pouvez générer des listings des inscrit avec les informations importantes comme les certificats manquants ou les paiement manquants.</p>
-        <p>Si vous attendez beaucoup d'équipe, il est recommander de créer plusieurs guichet en fonction du numéro de dossard de l'équipe.</p>
+        <p>Afin de simplifier le retrait des dossards avant votre course, vous pouvez générer des listings des inscrits avec les informations importantes comme les certificats manquants ou les paiement manquants.</p>
+        <p>Si vous attendez beaucoup d'équipe, il est recommandé de créer plusieurs guichets en fonction du numéro de dossard de l'équipe.</p>
         <p>Pour un meilleur résultat, imprimez la page générée en mode paysage.</p>
     </div>
 </fieldset>
 <fieldset class="module aligned">
     <div class="form-row">
         <div class="field-box">
-            <label for="nombre">Nombre de files:</label>
+            <label for="nombre">Nombre de guichets:</label>
             <input type="number" id="number" value="1" />
         </div>
     </div>
     <div class="form-row">
         <div class="field-box">
-            <label>Taille des files</label>
+            <label>Taille des guichets</label>
             <div id="slider" style="width: 575px">
                 <table id="range" width="100%" cellspacing="0" cellpadding="0">
                     <tr>
