--- a/static/src/less/site.less
+++ b/static/src/less/site.less
@@ -10,6 +10,8 @@
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 
+@popover-max-width: 100%;
+
 // Account
 @import "account.less";
 
