--- a/inscriptions/templates/_list_filter.html
+++ b/inscriptions/templates/_list_filter.html
@@ -26,6 +26,16 @@
             {% endfor %}
           </ul>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Top" %} <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a data-name="top" data-value="">{% if request.GET.top == "" %}<strong>{% endif %}{% trans "Tous" %}{% if request.GET.top == "" %}</strong>{% endif %}</a></li>
+            <li><a data-name="top" data-value="1">{% if request.GET.top == "1" %}<strong>{% endif %}{% trans "Top 1" %}{% if request.GET.top == "1" %}</strong>{% endif %}</a></li>
+            <li><a data-name="top" data-value="3">{% if request.GET.top == "3" %}<strong>{% endif %}{% trans "Top 3" %}{% if request.GET.top == "3" %}</strong>{% endif %}</a></li>
+            <li><a data-name="top" data-value="5">{% if request.GET.top == "5" %}<strong>{% endif %}{% trans "Top 5" %}{% if request.GET.top == "5" %}</strong>{% endif %}</a></li>
+            <li><a data-name="top" data-value="10">{% if request.GET.top == "10" %}<strong>{% endif %}{% trans "Top 10" %}{% if request.GET.top == "10" %}</strong>{% endif %}</a></li>
+          </ul>
+        </li>
       </ul>
       <div class="form-group">
         <input type="text" name="search" class="form-control" placeholder="Search">
@@ -47,4 +57,5 @@
 <input type="hidden" name="categorie" value="{{ request.GET.categorie }}" />
 <input type="hidden" name="by_categories" value="{{ request.GET.by_categories }}" />
 <input type="hidden" name="sort" value="{{ request.GET.sort }}" />
+<input type="hidden" name="top" value="{{ request.GET.top }}" />
 </form>
