--- a/inscriptions/templates/_list_filter.html
+++ b/inscriptions/templates/_list_filter.html
@@ -37,10 +37,12 @@
           </ul>
         </li>
       </ul>
-      <div class="form-group">
-        <input type="text" name="search" class="form-control" placeholder="Search">
+      <div class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" name="search" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Trie" %} <span class="caret"></span></a>
