--- a/inscriptions/templates/_list_filter.html
+++ b/inscriptions/templates/_list_filter.html
@@ -39,7 +39,7 @@
       </ul>
       <div class="navbar-form navbar-left" role="search">
           <div class="form-group">
-            <input type="text" name="search" class="form-control" placeholder="Search">
+              <input type="text" name="search" class="form-control" placeholder="Search", value="{{ request.GET.search }}">
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
       </div>
