--- a/inscriptions/templates/stats_compare.html
+++ b/inscriptions/templates/stats_compare.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "site_base.html" %}
 {% load i18n %}
 {% load l10n %}
 {% load stats %}
 
-{% block main %}
+{% block body %}
     <form id="formAlign">
         <div class="clearfix grid_4">
             Point de comparaison :
