--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -128,6 +128,10 @@ location.href = "choose/";
                         <i class="fa fa-line-chart"></i><br />
                         <label>{% blocktrans %}Statistiques{% endblocktrans %}</a>
                     </a>
+                    <a href="anomalies/">
+                        <i class="fa fa-exclamation-triangle"></i><br />
+                        <label>{% blocktrans %}Anomalies{% endblocktrans %}</a>
+                    </a>
                 </td>
             </tr>
         </table>
