fix mail and equipe a valider

--- a/inscriptions/templates/admin/equipe/send_mail.html
+++ b/inscriptions/templates/admin/equipe/send_mail.html
@@ -11,6 +11,9 @@
             "searchreplace visualblocks code fullscreen",
             "insertdatetime media table contextmenu paste"
         ],
+        relative_urls: false,
+        convert_urls: false,
+        remove_script_host : false,
         toolbar: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image"
     });
 </script>
