--- a/inscriptions/templates/done.html
+++ b/inscriptions/templates/done.html
@@ -2,106 +2,130 @@
 {% load i18n %}
 {% load l10n %}
 {% block body %}
-<h1>{% trans 'Votre inscription est enregistrée' %}</h1>
-<table>
-    <tr><th>{% trans 'Equipe : ' %}</th><td>{{ instance.nom }}</td></tr>
-    <tr><th>{% trans "Numéro d'inscription :" %}</th><td>{{ instance.numero }}</td></tr>
-</table>
-<br />
-{% if create %}
-{% trans 'Un email de confirmation vient de vous être envoyé.' %}<br />
-{% endif %}
-<br />
-<br />
-{% if not instance.paiement_complet %}
-{% if COURSE.paypal %}
-{% trans 'Pour régler votre inscription vous pouvez payer par internet :' %}
-
-{% block payment_form %}
-    <form action="{{ PAYPAL_URL }}" method="post">
-        <input type="hidden" name="business"      value="{{ PAYPAL_BUSINESS }}" />
-        <input type="hidden" name="currency_code" value="EUR" />
-        <input type="hidden" name="return"        value="" id="paypal_return_url" />
-        <input type="hidden" name="cmd"           value="_cart" />
-        <input type="hidden" name="upload"        value="1" />
-        <input type="hidden" name="no_shipping"   value="1" />
-        <input type="hidden" name="item_name_1"   value="{{ COURSE.uid }} - {{ instance.categorie.code }}" />
-        <input type="hidden" name="invoice"       value="{{ instance.id }}{{ hour }}" />
-        <input type="hidden" name="amount_1"      value="{{ instance.prix_paypal|stringformat:".2f" }}" />
-        <input type="hidden" name="quantity_1"    value="1" />
-        {# LEAVE THE HANDLING CHARGE ALONE!  PAYPAL SHIPPING WILL INEVITABLY BE MESSED UP IF YOU USE THEIR SHIPPING METHODS #}
-        {# To work around their bizarre system, we are telling Paypal "no shipping" and adding all shipping charges as handling #}
-        <input type="hidden" name="handling_cart" value="0.00" />
-        <input type="hidden" name="tax_cart"      value="0.00" />
-        <input type="hidden" name="notify_url"    value="{{ paypal_ipn_url }}" />
-
-        <input type="submit" value="{% trans 'Paypal ou Carte bancaire' %}"><br />
-    </form>
-    <script> document.getElementById('paypal_return_url').value = location.href; </script>
-{% endblock %}
-
-{% if instance.frais_paypal > 0 %}
-{% blocktrans with frais=instance.frais_paypal|floatformat:2 %}Pour tout paiement par internet, {{ frais }} € de frais seront ajoutés.{% endblocktrans %}{% blocktrans %}Ces frais correspondent aux frais de transaction Paypal.{% endblocktrans %}<br />
-{% endif %}
-<br />
-{% blocktrans with prix=instance.prix ordre=COURSE.ordre %}Ou envoyer un chèque de {{ prix }} € à l'ordre de "{{ ordre }}".{% endblocktrans %}<br />
-{% else %}
-{% blocktrans with prix=instance.prix ordre=COURSE.ordre %}Pour régler votre inscription vous pouvez envoyer un chèque de {{ prix }} € à l'ordre de "{{ ordre }}".{% endblocktrans %}<br />
-{% endif %}
-{% blocktrans with date=instance.date_annulation.date %}Envoyez votre paiement avant le {{ date }}. Si nous n'avons pas reçu votre paiement à cette date, votre inscription sera annulée.{% endblocktrans %}
-{% else %}
-{% blocktrans with prix=instance.paiement %}Votre paiement de {{ prix }} € à bien été reçu.{% endblocktrans %}
-{% endif %}
-
-<br />
-<br />
-<br />
-<br />
-{% if instance.licence_manquantes %}
-<div class="clearfix">
-    {% trans 'Il manque les licences de :' %} <ul>
-    {% for e in instance.licence_manquantes %}
-    <li>{{ e.prenom }} {{ e.nom }}</li>
-    {% endfor %}
-    </ul>
+<div class="jumbotron">
+    <h1>{% trans 'Votre inscription est enregistrée' %}</h1>
+    <p>
+        <table>
+            <tr><th>{% trans 'Equipe : ' %}</th><td>{{ instance.nom }}</td></tr>
+            <tr><th>{% trans "Numéro d'inscription :" %}</th><td>{{ instance.numero }}</td></tr>
+        </table>
+    </p>
+    {% if create %}
+    <p>{% trans 'Un email de confirmation vient de vous être envoyé.' %}</p>>
+    {% endif %}
 </div>
-{% endif %}
 
-{% if instance.certificat_manquantes %}
-<div class="clearfix">
-    {% blocktrans %}Il manque les certificats médicaux de (<a href="http://www.6hdeparis.fr/wp-content/uploads/2013/03/certificat_medical.pdf" target="_blank">modèle</a>):{% endblocktrans %}<ul>
-    {% for e in instance.certificat_manquantes %}
-    <li>{{ e.prenom }} {{ e.nom }}</li>
-    {% endfor %}
-    </ul>
-</div>
-{% endif %}
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans "Paiement :" %}</h3>
+    </div>
+    <div class="panel-body">
+        {% if not instance.paiement_complet %}
+        {% if COURSE.paypal %}
+        <p>{% trans 'Pour régler votre inscription vous pouvez payer par internet :' %}</p>
 
-{% if instance.autorisation_manquantes %}
-<div class="clearfix">
-    {% blocktrans %}Il manque les autorisations parentales (<a href="http://www.6hdeparis.fr/wp-content/uploads/2013/03/autorisation_parentale.pdf" target="_blank">modèle</a>) :{% endblocktrans %}<ul>
-    {% for e in instance.autorisation_manquantes %}
-    <li>{{ e.prenom }} {{ e.nom }}</li>
-    {% endfor %}
-    </ul>
-</div>
-{% endif %}
+        {% block payment_form %}
+        <p>
+            <form action="{{ PAYPAL_URL }}" method="post">
+                <input type="hidden" name="business"      value="{{ PAYPAL_BUSINESS }}" />
+                <input type="hidden" name="currency_code" value="EUR" />
+                <input type="hidden" name="return"        value="" id="paypal_return_url" />
+                <input type="hidden" name="cmd"           value="_cart" />
+                <input type="hidden" name="upload"        value="1" />
+                <input type="hidden" name="no_shipping"   value="1" />
+                <input type="hidden" name="item_name_1"   value="{{ COURSE.uid }} - {{ instance.categorie.code }}" />
+                <input type="hidden" name="invoice"       value="{{ instance.id }}{{ hour }}" />
+                <input type="hidden" name="amount_1"      value="{{ instance.prix_paypal|stringformat:".2f" }}" />
+                <input type="hidden" name="quantity_1"    value="1" />
+                {# LEAVE THE HANDLING CHARGE ALONE!  PAYPAL SHIPPING WILL INEVITABLY BE MESSED UP IF YOU USE THEIR SHIPPING METHODS #}
+                {# To work around their bizarre system, we are telling Paypal "no shipping" and adding all shipping charges as handling #}
+                <input type="hidden" name="handling_cart" value="0.00" />
+                <input type="hidden" name="tax_cart"      value="0.00" />
+                <input type="hidden" name="notify_url"    value="{{ paypal_ipn_url }}" />
 
-{% if instance.categorie == "EPX" %}
-<div class="clearfix">
-{% blocktrans %}Catégorie Entreprise / Étudiants : Si ce n'est déjà fait, pensez à envoyer un certificat signé par l'employeur (un seul pour toute l'équipe, <a href="http://www.6hdeparis.fr/wp-content/uploads/2013/03/attestation_entreprise.pdf" target="_blank">modèle</a>) ou une copie des fiches de paies ou une copie des cartes étudiants.{% endblocktrans %}
+                <input type="submit" value="{% trans 'Paypal ou Carte bancaire' %}"><br />
+            </form>
+            <script> document.getElementById('paypal_return_url').value = location.href; </script>
+        </p>
+        {% endblock %}
+
+        {% if instance.frais_paypal > 0 %}
+        <p>{% blocktrans with frais=instance.frais_paypal|floatformat:2 %}Pour tout paiement par internet, {{ frais }} € de frais seront ajoutés.{% endblocktrans %}{% blocktrans %}Ces frais correspondent aux frais de transaction Paypal.{% endblocktrans %}</p>
+        {% endif %}
+        <p>{% blocktrans with prix=instance.prix ordre=COURSE.ordre %}Ou envoyer un chèque de {{ prix }} € à l'ordre de "{{ ordre }}".{% endblocktrans %}</p>
+        {% else %}
+        <p>{% blocktrans with prix=instance.prix ordre=COURSE.ordre %}Pour régler votre inscription vous pouvez envoyer un chèque de {{ prix }} € à l'ordre de "{{ ordre }}".{% endblocktrans %}</p>
+        {% endif %}
+        <p>{% blocktrans with date=instance.date_annulation.date %}Envoyez votre paiement avant le {{ date }}. Si nous n'avons pas reçu votre paiement à cette date, votre inscription sera annulée.{% endblocktrans %}</p>
+        {% else %}
+        <p>{% blocktrans with prix=instance.paiement %}Votre paiement de {{ prix }} € à bien été reçu.{% endblocktrans %}</p>
+        {% endif %}
+    </div>
 </div>
-{% endif %}
-<br />
-<br />
-<br />
-<br />
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans "Documents :" %}</h3>
+    </div>
+    <div class="panel-body">
+        {% if instance.licence_manquantes or instance.certificat_manquantes or instance.autorisation_manquantes %}
+            {% if instance.licence_manquantes %}
+            <div class="clearfix">
+                {% trans 'Il manque les licences de :' %} <ul>
+                {% for e in instance.licence_manquantes %}
+                <li>{{ e.prenom }} {{ e.nom }}</li>
+                {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+
+            {% if instance.certificat_manquantes %}
+            <div class="clearfix">
+                {% blocktrans %}Il manque les certificats médicaux de (<a href="http://www.6hdeparis.fr/wp-content/uploads/2013/03/certificat_medical.pdf" target="_blank">modèle</a>):{% endblocktrans %}<ul>
+                {% for e in instance.certificat_manquantes %}
+                <li>{{ e.prenom }} {{ e.nom }}</li>
+                {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+
+            {% if instance.autorisation_manquantes %}
+            <div class="clearfix">
+                {% blocktrans %}Il manque les autorisations parentales (<a href="http://www.6hdeparis.fr/wp-content/uploads/2013/03/autorisation_parentale.pdf" target="_blank">modèle</a>) :{% endblocktrans %}<ul>
+                {% for e in instance.autorisation_manquantes %}
+                <li>{{ e.prenom }} {{ e.nom }}</li>
+                {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        {% else %}
+        <p>{% trans "Il ne manque aucun document." %}</p>
+        {% endif %}
+    </div>
+</div>
+
 {% if not instance.paiement or instance.licence_manquantes or instance.certificat_manquantes or instance.autorisation_manquantes %}
-{% trans 'Vous pouvez envoyer le paiement et les justificatifs à' %} <br />
-<pre>{{ COURSE.adresse }}</pre>
-<br />
-{% blocktrans with numero=instance.numero %}En précisant le nom de votre équipe et le numéro d'inscription <b>{{ numero }}</b>.{% endblocktrans %}
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">{% trans "Instructions :" %}</h3>
+    </div>
+    <div class="panel-body">
+        <p>{% trans 'Vous pouvez envoyer le paiement et les justificatifs à' %} </p>
+        <pre>{{ COURSE.adresse }}</pre>
+        <p>{% blocktrans with numero=instance.numero %}En précisant le nom de votre équipe et le numéro d'inscription <b>{{ numero }}</b>.{% endblocktrans %}</p>
+    </div>
+</div>
 {% endif %}
+
+{% for ec in instance.challenges.all %}
+    {% with ec.participation as participation %}
+        {% with participation.challenge as challenge %}
+            {% include "_participation.html" %}
+        {% endwith %}
+    {% endwith %}
+{% endfor %}
+                
+
 {% endblock %}
 
 {% block sidebar %}
